examples/should_pass/benign-unused-delayed.anvil
proc Top() {
  loop {
    let unused = 1'b1;
    cycle 2 >>
    if 1'b1 {
      cycle 1
    } else {
      dprint "Value is %d" (unused);
      cycle 1
    } >>
    dfinish
  }
}
